k8s/media-services/dav-streaming/decypharr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: decypharr
  namespace: media-services
  labels:
    app: decypharr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: decypharr
